--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,39 +15,6 @@ body,
   margin: 0;
 }
 
-
-.react-flow .react-flow__node {
-  border-color: transparent;
-}
-
 .react-flow__attribution {
   display: none;
-}
-
-.react-flow__node-customNode {
-  display: flex;
-  font-size: 12px;
-  border-radius: 2px;
-  width: 150px;
-  height: 40px;
-  padding: 20px;
-}
-
-.label__wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: inherit;
-}
-
-.bar-chart__wrapper {
-  background-color: #EFEBE5;
-  display: flex;
-  flex-direction: column;
-  padding: 10px 10px 0 10px;
 }
